<resources>
    <string name="app_name">RecipeManiaApp</string>
    <string name="form_description">Form Description</string>
    <string name="write_description">Write Description</string>
    <string name="back_form_btn">Back</string>
    <string name="form_save_btn">Save Button</string>
    <string name="title_form">Title</string>
    <string name="new_recipe_name">Recipe Name</string>
    <string name="add_photos_btn">Add Photo</string>
    <string name="add_information_btn">Add Information</string>
    <string name="add_ingredients_btn">Add Ingredients</string>
    <string name="add_steps_btn">Add Steps</string>
    <string name="add_new_recipe_btn">Add New Recipe</string>

    <string-array name="category_array">
        <item>Choose a category</item>
        <item>Meal</item>
        <item>Pizza</item>
        <item>Dessert</item>
        <item>Pasta</item>
    </string-array>
    <string name="title_activity_navigation_bar">NavigationBar</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_add_new_recipe">Add New Recipe</string>
    <string name="title_profile">Profile</string>
    <string name="title_sign_out">Sign Out</string>
    <string name="menu_sign_out">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_recipe_name">Write your recipe\'s name.</string>
    <string name="preview">Preview</string>

    <!-- PROFILE -->
    <string name="my_profile">My Profile</string>
    <string name="profile_name">Hizkia</string>
    <string name="tab_text_1">My Recipe</string>
    <string name="tab_text_2">Saved</string>
    <string name="profile_status">User</string>
    <string name="profile_num_likes">100</string>
    <string name="profile_like">likes</string>
    <string name="myRecipeTest">my Recipe Test</string>
    <string name="savedRecipeTest">savedRecipeTest</string>

    <!-- Setting -->
    <string name="setting">Setting</string>
    <string name="setting_account">Account</string>
    <string name="editProfile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="signOut">Sign Out</string>
    <string name="feedback">FeedBack</string>
    <string name="email_recipe_mania">Email Recipe Mania</string>
    <string name="legal">Legal</string>
    <string name="privacy_policy">Privacy Policy</string>

<!--    APP DETAIL-->
    <string name="recipe_tab_text_1">Information</string>
    <string name="recipe_tab_text_2">Ingredients</string>
    <string name="recipe_tab_text_3">Steps</string>
    <string name="profilename">ProfileName</string>
</resources>
