<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingActivity"
    android:orientation="vertical"
    android:paddingTop="40sp"
    android:paddingLeft="20sp"
    android:paddingRight="20sp"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/settingBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="40sp">
        <ImageView
            android:id="@+id/imageSetting"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/setting"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:text="@string/setting"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="35sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_account"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/edit_profile"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/editProfile"
            android:textAllCaps="false"
            android:textAlignment="textStart"
            android:background="@android:color/white"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle="normal"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/change_password"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/change_password"
            android:textAllCaps="false"
            android:textAlignment="textStart"
            android:background="@android:color/white"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle="normal"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/sign_out"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@android:color/white"
            android:drawableStart="@drawable/icon_signout"
            android:text="@string/signOut"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/email_developer"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/email_recipe_mania"
            android:textAllCaps="false"
            android:textAlignment="textStart"
            android:background="@android:color/white"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle="normal"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/legal"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/user_agreement"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/email_recipe_mania"
            android:textAllCaps="false"
            android:textAlignment="textStart"
            android:background="@android:color/white"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle="normal"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/privacy_policy"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/privacy_policy"
            android:textAllCaps="false"
            android:textAlignment="textStart"
            android:background="@android:color/white"
            style="?android:attr/borderlessButtonStyle"
            android:textStyle="normal"
            android:textSize="16sp"/>
    </LinearLayout>


</LinearLayout>