<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.recipemaniaapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.recipemaniaapp.ui.search.SearchBarFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search_bar" />

    <fragment
        android:id="@+id/navigation_add_new_recipe"
        android:name="com.example.recipemaniaapp.ui.newrecipe.ContainerFragment"
        android:label="Add New Recipe"
        tools:layout="@layout/fragment_add_form" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.recipemaniaapp.ui.home.HomeFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_home" />
<!--    <fragment-->
<!--        android:id="@+id/navigation_sign_out"-->
<!--        android:name="com.example.recipemaniaapp.ui.home.HomeFragment"-->
<!--        android:label="@string/title_sign_out"-->
<!--        tools:layout="" />-->
</navigation>
