<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F6FA"
    android:paddingLeft="5dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/new_recipe_name"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edt_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/hint_recipe_name"
            android:inputType="textPersonName" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="18dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            tools:layout_marginLeft="3dp">

            <LinearLayout
                android:id="@+id/layout_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:id="@+id/tv_photos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Photo"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/edit_photo_btn"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:background="#FFFFFF"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/icon_edit" />

                </RelativeLayout>

                <Button
                    android:id="@+id/add_photos_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/add_photos_btn" />

                <TextView
                    android:id="@+id/tv_preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="You haven't uploaded any image." />

                <ImageView
                    android:id="@+id/image_preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="18dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            tools:layout_marginLeft="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:id="@+id/tv_information"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Information"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/edit_information_btn"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:background="#FFFFFF"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/icon_edit" />

                </RelativeLayout>

                <Button
                    android:id="@+id/add_information_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/add_information_btn" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="18dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            tools:layout_marginLeft="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:id="@+id/tv_ingredient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ingredient"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/edit_ingredient_btn"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:background="#FFFFFF"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/icon_edit" />

                </RelativeLayout>

                <Button
                    android:id="@+id/add_ingredient_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/add_ingredients_btn" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="18dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            tools:layout_marginLeft="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:id="@+id/tv_how_to_cook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="How to Cook"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/edit_btn"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:background="#FFFFFF"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/icon_edit" />

                </RelativeLayout>

                <Button
                    android:id="@+id/add_steps_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/add_steps_btn" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="18dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            tools:layout_marginLeft="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Category"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/category_spinner"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:entries="@array/category_array"
                    android:padding="5dp" />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/add_new_recipe_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/add_new_recipe_btn" />

    </LinearLayout>
</ScrollView>